# netsci

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  netsci.yml  pyproject.toml  pytest.ini
cnpy/: CMakeLists.txt
cnpy/include/: cnpy.h
cnpy/src/: cnpy.cpp
cuarray/: CMakeLists.txt  README.md
cuarray/include/: cuarray.h
cuarray/python/: setup.py
cuarray/python/cuarray/: __init__.py
cuarray/samples/: CuArray_CuArray.cpp
cuarray/samples/cpp/: CMakeLists.txt
cuarray/samples/cpp/src/: CuArray_CuArray.cpp  CuArray_allocateDevice.cpp  CuArray_allocateHost.cpp  CuArray_allocatedDevice.cpp  CuArray_allocatedHost.cpp  CuArray_argsort.cpp  CuArray_bytes.cpp  CuArray_deallocateHost.cpp  CuArray_device.cpp  CuArray_fromCuArrayDeepCopy.cpp  CuArray_fromCuArrayShallowCopy.cpp  CuArray_fromNumpy1.cpp  CuArray_fromNumpy2.cpp  CuArray_get.cpp  CuArray_host.cpp  CuArray_init1.cpp  CuArray_init2.cpp  CuArray_load.cpp  CuArray_m.cpp  CuArray_n.cpp  CuArray_owner.cpp  CuArray_save.cpp  CuArray_set.cpp  CuArray_size.cpp  CuArray_sort.cpp  CuArray_subscriptOperator.cpp  CuArray_toDevice.cpp  CuArray_toHost.cpp  CuArray_toNumpy1.cpp  CuArray_toNumpy2.cpp
cuarray/samples/python/: CuArray___getitem__.py  CuArray___init__.py  CuArray_argsort.py  CuArray_fromCuArray.py  CuArray_fromNumpy1D.py  CuArray_fromNumpy2D.py  CuArray_get.py  CuArray_init.py  CuArray_load.py  CuArray_m.py  CuArray_n.py  CuArray_save.py  CuArray_set.py  CuArray_size.py  CuArray_sort.py  CuArray_toNumpy2D.py
cuarray/src/: cuarray.cu
cuarray/swig/: numpy_float_array.i  numpy_int_array.i  python_cuarray.i  python_cuarray_docs.i  python_cuarray_headers.i  python_cuarray_ignore.i  python_cuarray_pythoncode.i  python_cuarray_rename.i  python_cuarray_template.i  python_cuarray_typemaps.i  tcl_cuarray.i  tcl_cuarray_ignore.i  tcl_cuarray_include.i  tcl_cuarray_rename.i  tcl_cuarray_typemaps.i
cuarray/tcl/: create_vmd_package.tcl  cuarray.tcl
docs/: Makefile  README.md  conf.py  index.rst  installation.rst  introduction.rst  make.bat  netsci.tex  program_options.rst  tutorial.rst  (+3 more)
doxygen/: index.h
netcalc/: CMakeLists.txt
netcalc/include/: cutoff_matrix.h  generalized_correlation.h  hedetniemi.h  math_utils.h  mutual_information.h  platform.h  psi.h
netcalc/python/: setup.py
netcalc/python/netcalc/: __init__.py
netcalc/samples/python/: NetCalc_generalizedCorrelation.py  NetCalc_generalizedCorrelationWithCheckpointing.py  NetCalc_mutualInformation.py  NetCalc_mutualInformationWithCheckpointing.py
netcalc/scratch/: checkpointing_scratch.cpp
netcalc/src/: cutoff_matrix.cpp  cutoff_matrix_cpu.cpp  cutoff_matrix_gpu.cu  generalized_correlation.cpp  generalized_correlation_cpu.cpp  generalized_correlation_gpu.cpp  hedetniemi.cpp  hedetniemi_cpu.cpp  hedetniemi_gpu.cu  math_utils.cpp  math_utils_gpu.cu  mutual_information.cpp  mutual_information_cpu.cpp  mutual_information_gpu.cu
netcalc/swig/: numpy_int_array.i  python_netcalc.i  python_netcalc_header.i  python_netcalc_include.i  python_netcalc_rename.i
netchem/: CMakeLists.txt  README.md
netchem/include/: atom.h  atoms.h  chemical_properties.h  graph.h  network.h  node.h  serializer.h  utils.h
netchem/include/dcd/: dcd.h  endianswap.h  fastio.h  molfile_plugin.h  vmdplugin.h
netchem/include/json/: LISCENSE.MIT
netchem/include/json/include/nlohmann/: json.hpp
netchem/include/json/include/nlohmann/detail/: json_custom_base_class.hpp
netchem/include/json/include/nlohmann/detail/iterators/: iter_impl.hpp
netchem/include/json/tools/gdb_pretty_printer/: README.md
netchem/python/: setup.py
netchem/python/netchem/: __init__.py
netchem/samples/python/: NetChem_Atom_chainId.py  NetChem_Atom_element.py  NetChem_Atom_index.py  NetChem_Atom_mass.py  NetChem_Atom_name.py  NetChem_Atom_occupancy.py  NetChem_Atom_residueId.py  NetChem_Atom_residueName.py  NetChem_Atom_segmentId.py  NetChem_Atom_serial.py  NetChem_Atom_tag.py  NetChem_Atom_temperatureFactor.py  NetChem_Atoms_at.py  NetChem_Atoms_atoms.py  NetChem_Atoms_numAtoms.py  NetChem_Network_atoms.py  NetChem_Network_init.py  NetChem_Network_load.py  NetChem_Network_nodeCoordinates1.py  NetChem_Network_nodeCoordinates2.py  NetChem_Network_nodeFromAtomIndex.py  NetChem_Network_nodes.py  NetChem_Network_numFrames.py  NetChem_Network_numNodes.py  NetChem_Network_save.py  NetChem_Node_atoms.py  NetChem_Node_index.py  NetChem_Node_numAtoms.py  NetChem_Node_tag.py  NetChem_Node_totalMass.py
netchem/scratch/: stride_scratch.cpp
netchem/src/: atom.cpp  atoms.cpp  graph.cpp  network.cpp  node.cpp  serializer.cpp  utils.cpp
netchem/src/dcd/: dcd.cpp
netchem/swig/: python_netchem.i  python_netchem_headers.i  python_netchem_include.i  python_netchem_templates.i  python_netchem_typemap.i  python_netchem_typemaps.i
netsci/: CMakeLists.txt
netsci/include/: generalized_correlation.h  mutual_information.h
netsci/python/: setup.py
netsci/python/netsci/: __init__.py
netsci/src/: cpu_generalized_correlation.cpp  cpu_mutual_information.cpp  generalized_correlation.cpp  gpu_generalized_correlation.cpp  gpu_mutual_information.cu  mutual_information.cpp  psi.cpp
netsci/swig/: python_netsci.i  python_netsci_include.i
netvis/: CMakeLists.txt
netvis/include/: path.h  paths.h
netvis/src/: path.cpp  paths.cpp
netvis/swig/: tcl_netvis.i  tcl_netvis_headers.i  tcl_netvis_include.i  tcl_netvis_typemaps.i
netvis/tcl/: create_vmd_package.tcl
tests/cuarray/: CMakeLists.txt  CuArrayFloatFixture.h  CuArrayFloat_test.cpp
tests/cuarray/cpp/: CMakeLists.txt  FloatCuArrayFixture.h  FloatCuArray_test.cpp
tests/cuarray/python/: conftest.py  test_FloatCuArray.py
tests/netcalc/cpp/: CMakeLists.txt  GeneralizedCorrelation_test.cpp  MutualInformation_test.cpp
tests/netcalc/cpp/data/: 2X_1D_2000_4.npy
tests/netchem/cpp/: CMakeLists.txt  NetworkStride1_test.cpp  NetworkStride2_test.cpp  NetworkStride3_test.cpp  NetworkStrideCoordinateEquality_test.cpp
tests/netchem/cpp/data/: test.dcd
tests/netsci/cpp/: CMakeLists.txt  GeneralizedCorrelation_test.cpp  MutualInformation_test.cpp
(+126 files in other folders)
